--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/index_main.css"/>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
     <title>Fizzmod TP4</title>
 </head>
 <body>
-    <Header>
-        <h1>TP 4 FIZZMOD</h1>
-    </Header>
-    <section>
-        <form>
-            <div>
-                <input type="text" placeholder="Ingrese el nombre del producto" />
-            </div>
-            <div>
-                <input type="number" placeholder="Ingrese el precio" />
-            </div>
-            <div>
-                <input type="text" name="" id="">
-            </div>
-            <div>
-                <textarea placeholder="Ingrese una descripción" />
-            </div>
-        </form>
-    </section>
+    <div class="index_login">
+        <Header>
+            <h1>TP 4 FIZZMOD</h1>
+        </Header>
+        <section>
+            <form action="/api/ingresar" method="POST" autocomplete="off">
+                <div>
+                    <input type="text" name="name" placeholder="Ingrese el nombre del producto" />
+                </div>
+                <div>
+                    <input type="number" placeholder="Ingrese el precio" name="price" />
+                </div>
+                <div>
+                    <textarea placeholder="Ingrese una descripción" name="description"></textarea>
+                </div>
+                <div>
+                    <input type="text" name="url" placeholder="Ingrese la url de la imagen">
+                </div>
+                
+                <button value="agregar">agregar</button>
+            </form>
+        </section>
     <footer>
         <p>2021 Pablo Emanuel Chorolque</p>
     </footer>
+</div>
 </body>
 </html>
