--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/index_main.css"/>
     <link rel="stylesheet" type="text/css" href="main.css"/>
     <title>Fizzmod TP4</title>
@@ -29,6 +30,10 @@
                 </div>
                 
                 <button value="agregar">agregar</button>
+                <div class='div-enlaces'>
+                    <a class="link-1" href="/api/listar">Listado de Productos</a>
+                    <a class="link-2" href="/api/set-correo">Agregar Email</a>
+                </div>
             </form>
         </section>
     <footer>
