--- a/src/public/mail.html
+++ b/src/public/mail.html
@@ -4,22 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/css/index_main.css"/>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
     <title>Fizzmod TP4- ENVIO DE MAIL</title>
 </head>
 <body>
+    <div class="index_login">
     <header>
-        FIZZMOD 2021
+        <h1>FIZZMOD 2021</h1>
     </header>
     <main>
         <section>
                 <form action="/api/set-correo" method="POST">
-                    <div>
-                        <label for="email">Mail</label>
-                        <input type="text" placeholder="Ingrese un Mail" name="email" id="email"/>
+                    <div class="">
+                        <label for="email">Email</label>
+                        <input type="text" placeholder="Ingrese un Email" name="email" id="email"/>
                     </div>
                     <button value="enviar">Enviar</button>
+                    <div class='div-enlaces'>
+                        <a class="link-1" href="/">Volver</a>
+                        <a class="link-2" href="/api/listar">Listado de Productos</a>
+                    </div>
                 </form>
         </section>
     </main>
+    <footer>
+        <p>2021 Pablo Emanuel Chorolque</p>
+    </footer>
+</div>
 </body>
 </html>
