--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,8 +31,8 @@
                 
                 <button value="agregar">agregar</button>
                 <div class='div-enlaces'>
-                    <a class="link-1" href="/api/listar">Listado de Productos</a>
-                    <a class="link-2" href="/api/set-correo">Agregar Email</a>
+                    <a class="link-1" href="/listar">Listado de Productos</a>
+                    <a class="link-2" href="/set-correo">Agregar Email</a>
                 </div>
             </form>
         </section>
