--- a/src/public/mail.html
+++ b/src/public/mail.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <section>
-                <form action="/api/set-correo" method="POST">
+                <form action="/set-correo" method="POST">
                     <div class="">
                         <label for="email">Email</label>
                         <input type="text" placeholder="Ingrese un Email" name="email" id="email"/>
@@ -24,7 +24,7 @@
                     <button value="enviar">Enviar</button>
                     <div class='div-enlaces'>
                         <a class="link-1" href="/">Volver</a>
-                        <a class="link-2" href="/api/listar">Listado de Productos</a>
+                        <a class="link-2" href="/listar">Listado de Productos</a>
                     </div>
                 </form>
         </section>
