--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,7 +15,7 @@
             <h1>TP 4 FIZZMOD</h1>
         </Header>
         <section>
-            <form action="/api/ingresar" method="POST" autocomplete="off">
+            <form action="/ingresar" method="POST" autocomplete="off">
                 <div>
                     <input type="text" name="name" placeholder="Ingrese el nombre del producto" />
                 </div>
